deploy: e12d8bfc9ff90051ede1c50acc03a6219c326bfc

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a38d2268",
+   "id": "25151f90",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc9502e",
+   "id": "a29d4b81",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "800124a0",
+   "id": "cac8542c",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf1c31a1",
+   "id": "28ee05ad",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cab74c2",
+   "id": "f1a7134a",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4cdd412",
+   "id": "606e8902",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2c0df321",
+   "id": "b1d4118a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:24.528004Z",
-     "iopub.status.busy": "2025-01-30T12:14:24.527829Z",
-     "iopub.status.idle": "2025-01-30T12:14:27.527950Z",
-     "shell.execute_reply": "2025-01-30T12:14:27.527321Z"
+     "iopub.execute_input": "2025-01-30T13:59:38.150713Z",
+     "iopub.status.busy": "2025-01-30T13:59:38.150538Z",
+     "iopub.status.idle": "2025-01-30T13:59:41.117536Z",
+     "shell.execute_reply": "2025-01-30T13:59:41.116951Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff589712",
+   "id": "a8feaa47",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7304f7",
+   "id": "12986c65",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b05af8",
+   "id": "63ebf3c4",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8ba97e2",
+   "id": "e3c0ce07",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bdd2a12",
+   "id": "cef43c47",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c918d3bc",
+   "id": "eb5d1652",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5550dddb",
+   "id": "b88ab710",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef93a29",
+   "id": "7b9c5600",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e085af76",
+   "id": "41805079",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:27.530205Z",
-     "iopub.status.busy": "2025-01-30T12:14:27.529795Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.476797Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.476166Z"
+     "iopub.execute_input": "2025-01-30T13:59:41.119849Z",
+     "iopub.status.busy": "2025-01-30T13:59:41.119426Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.020194Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.019565Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d85c1ea",
+   "id": "2a0d7c9b",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d0c31041",
+   "id": "75303571",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.478876Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.478424Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.482136Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.481518Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.022238Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.021790Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.025262Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.024700Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb6896d",
+   "id": "6617f9d5",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384f0d11",
+   "id": "606ed476",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f191508b",
+   "id": "d09be5ed",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "184a3a2f",
+   "id": "aafaad9d",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70bf5d21",
+   "id": "013af1a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.483875Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.483675Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.527531Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.526959Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.027115Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.026795Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.070165Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.069642Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f966a1f9",
+   "id": "61ca07f0",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56a965aa",
+   "id": "db7e25a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.529323Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.529114Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.597018Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.596428Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.071962Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.071779Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.137963Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.137381Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f693272c",
+   "id": "f3fd1364",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8287c7",
+   "id": "29829ce1",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3641c720",
+   "id": "71bdfc7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.598810Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.598579Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.625676Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.625084Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.140074Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.139632Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.166388Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.165849Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ef91efa",
+   "id": "1ac2780d",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391156ea",
+   "id": "fc81c605",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7421e04e",
+   "id": "2a90cc5c",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2f3b49f",
+   "id": "8b116116",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af5c7ea",
+   "id": "417e3761",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2b7ee779",
+   "id": "95d941b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.627788Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.627328Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.631470Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.630777Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.168757Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.168163Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.173598Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.173111Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572ee75d",
+   "id": "e3f64117",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18c3f5a2",
+   "id": "bdcb0abe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.633366Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.633021Z",
-     "iopub.status.idle": "2025-01-30T12:14:29.635996Z",
-     "shell.execute_reply": "2025-01-30T12:14:29.635506Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.175542Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.175191Z",
+     "iopub.status.idle": "2025-01-30T13:59:43.178226Z",
+     "shell.execute_reply": "2025-01-30T13:59:43.177655Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e88e43",
+   "id": "add00dc4",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a988d154",
+   "id": "c3260e9e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:29.637766Z",
-     "iopub.status.busy": "2025-01-30T12:14:29.637400Z",
-     "iopub.status.idle": "2025-01-30T12:14:32.171153Z",
-     "shell.execute_reply": "2025-01-30T12:14:32.170664Z"
+     "iopub.execute_input": "2025-01-30T13:59:43.179890Z",
+     "iopub.status.busy": "2025-01-30T13:59:43.179713Z",
+     "iopub.status.idle": "2025-01-30T13:59:45.731812Z",
+     "shell.execute_reply": "2025-01-30T13:59:45.731223Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58ab87ee",
+   "id": "48dbc2e7",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6acc05ad",
+   "id": "75276750",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5454c0ab",
+   "id": "86b1300a",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc8fb6f2",
+   "id": "db10a8ef",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2a0057ef",
+   "id": "0e0c7dfe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:32.173156Z",
-     "iopub.status.busy": "2025-01-30T12:14:32.172983Z",
-     "iopub.status.idle": "2025-01-30T12:14:32.176357Z",
-     "shell.execute_reply": "2025-01-30T12:14:32.175884Z"
+     "iopub.execute_input": "2025-01-30T13:59:45.734239Z",
+     "iopub.status.busy": "2025-01-30T13:59:45.733674Z",
+     "iopub.status.idle": "2025-01-30T13:59:45.737364Z",
+     "shell.execute_reply": "2025-01-30T13:59:45.736816Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc5444fc5e0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f3db467fd80>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015ddabb",
+   "id": "f1c3b3db",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5849a824",
+   "id": "85efd453",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c013de2e",
+   "id": "8258aa02",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc2f687",
+   "id": "eb303435",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1592008a",
+   "id": "f8896154",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:32.178245Z",
-     "iopub.status.busy": "2025-01-30T12:14:32.177940Z",
-     "iopub.status.idle": "2025-01-30T12:14:32.180808Z",
-     "shell.execute_reply": "2025-01-30T12:14:32.180212Z"
+     "iopub.execute_input": "2025-01-30T13:59:45.739093Z",
+     "iopub.status.busy": "2025-01-30T13:59:45.738915Z",
+     "iopub.status.idle": "2025-01-30T13:59:45.741918Z",
+     "shell.execute_reply": "2025-01-30T13:59:45.741468Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c918f418",
+   "id": "18cc8ee9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:14:32.182618Z",
-     "iopub.status.busy": "2025-01-30T12:14:32.182195Z",
-     "iopub.status.idle": "2025-01-30T12:14:33.244474Z",
-     "shell.execute_reply": "2025-01-30T12:14:33.243939Z"
+     "iopub.execute_input": "2025-01-30T13:59:45.743753Z",
+     "iopub.status.busy": "2025-01-30T13:59:45.743281Z",
+     "iopub.status.idle": "2025-01-30T13:59:46.797856Z",
+     "shell.execute_reply": "2025-01-30T13:59:46.797268Z"
     }
    },
    "outputs": [
